fix unwrap not working with only one pinned vertex. This commit fixes T79590

Differential Revision: https://developer.blender.org/D8484